#247: ported to Java 9 and removed guava dependencies